<resources>
    <string name="app_name">Food Factory</string>
    <string name="foodpricehome">1000</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    //toolbar
    <string name="txt_toolbarName">Order Delivery</string>
    <string name="txt_toolbarName2">Edit Delivery Details</string>
    <string name="txt_toolbarName3">Order Confirmation</string>
    <string name="txt_toolbarName5">Order Details</string>
    <string name="txt_toolbarName4">About Us</string>
    <string name="txt_toolbarName6">Payment</string>
    <string name="txt_toolbarName7">Order Details</string>
    <string name="txt_toolbarName8">Payment Confirmation </string>
    <string name="txt_toolbarName10"> Food Item  </string>
    <string name="txt_toolbarName11"> Table List  </string>
    <string name="txt_toolbarName12"> Select Quntity  </string>

    //aboutus
    <string name="tv_createby">Create By Food Factory (pvt)</string>
    <string name="tv_likeus">Like us on</string>
    <string name="tv_foodfactory">Food Factory</string>
    <string name="tv_companyaddress">26/D, \n Malabe,\n Kaduwela</string>
    <string name="tv_aboutus1">We are the leading Food Company in \n\n Sri Lanka</string>
    <string name="tv_aboutus2">We created this application for a better way to \n order and delivery your favourite food items.
        Using that \n save your time and money.</string>

    //delivery
    <string name="tv_name">Customer Name</string>
    <string name="tv_phone">Contact Number</string>
    <string name="tv_address">Delivery Address</string>
    <string name="tv_email">Email</string>
    <string name="edtxt_email">@gmail.com</string>
    <string name="checkBox_accpt">I Accept terms and Condition</string>
    <string name="btn_deliveryCnfrm">Confirm Delivery</string>
    <string name="btn_editDelivery">Edit Delivery Details</string>

    //order completed
    <string name="tv_odercmplted">Order Completed</string>
    <string name="tv_thankyou">Thank You! We\'ve received your Details</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_orderedit">Edit Delivery Details</string>

    //Payment
    <string name="id_name">Name</string>
    <string name="ed_name">Enter Name</string>
    <string name="id_card">Card type</string>
    <string name="id_radiobtn1">Visa</string>
    <string name="id_radiobtn2">Mastercard</string>
    <string name="id_amount">Amount</string>
    <string name="ed_amount">Enter Amount</string>
    <string name="id_no">Card No</string>
    <string name="ed_no">Enter Card number</string>
    <string name="ed_date">mm/yy</string>
    <string name="ed_valid">CVV</string>
    <string name="Id_btnpay">Pay</string>
    <string name="ed_mobileno">Enter Moble No</string>


    <string name="id_food">Food Name</string>
    <string name="ed_food">Food name</string>
    <string name="id_price">Price</string>
    <string name="ed_price">Price</string>
    <string name="id_quantity">Quantity</string>
    <string name="id_total">Total</string>
    <string name="ed_total">Total</string>
    <string name="ed_quantity">Quantity</string>
    <string name="btncalculate">Proceed to pay</string>


    <string name="id_message"> Payment Successful</string>
    <string name="btnsee">View Payment</string>
    <string name="id_delmsg">Delivery is only within 5 km</string>
    <string name="btndeliver">Add to deliver</string>
    <string name="btnhome">Home</string>


</resources>