<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/toolbar"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/txt_toolbarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:text="@string/txt_toolbarName"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/id_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/id_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/ed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:ems="10"
        android:hint="@string/ed_name"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_name"
        app:layout_constraintStart_toEndOf="@+id/id_name" />

    <TextView
        android:id="@+id/id_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/id_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_name" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/id_card"
        app:layout_constraintTop_toBottomOf="@+id/ed_name">

        <RadioButton
            android:id="@+id/id_radiobtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_radiobtn1" />

        <RadioButton
            android:id="@+id/id_radiobtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_radiobtn2" />
    </RadioGroup>

    <TextView
        android:id="@+id/id_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/id_amount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/ed_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:ems="10"
        android:hint="@string/ed_amount"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_amount"
        app:layout_constraintStart_toEndOf="@+id/id_amount" />

    <TextView
        android:id="@+id/id_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="56dp"
        android:text="@string/id_no"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_amount" />

    <EditText
        android:id="@+id/ed_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ed_no"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/id_no"
        app:layout_constraintTop_toBottomOf="@+id/ed_amount" />

    <EditText
        android:id="@+id/ed_date"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ed_date"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_no" />

    <EditText
        android:id="@+id/ed_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/ed_valid"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/ed_date"
        app:layout_constraintTop_toBottomOf="@+id/ed_no" />

    <Button
        android:id="@+id/id_btnpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/Id_btnpay"
        app:backgroundTint="@color/btn_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_valid" />

</androidx.constraintlayout.widget.ConstraintLayout>