<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentComplete">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
              android:id="@+id/imageView"
              android:layout_width="57dp"
              android:layout_height="58dp"
              android:layout_marginStart="32dp"
              android:layout_marginLeft="32dp"
              android:layout_marginTop="48dp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
              app:srcCompat="@drawable/right"
             />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
          <TextView
              android:id="@+id/id_message"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="25dp"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="58dp"
              android:text="@string/id_message"
              android:textColor="@color/black"
              android:textSize="20sp"
              tools:text="Payment Successful" />
    <TextView
        android:id="@+id/id_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/id_message"
        android:textColor="@color/black"
        android:textSize="14sp"
        tools:text="Thank you Payment with us" />
</LinearLayout>

      </LinearLayout>

      <Button
          android:id="@+id/btnsee"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:onClick="gotoView"
          android:text="@string/btnsee"
          app:backgroundTint="@color/btn_footer"
          android:layout_marginTop="20pt"
          android:layout_marginLeft="65pt"/>


    <TextView
        android:id="@+id/id_delmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="75dp"
        android:text="@string/id_delmsg"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btndeliver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:layout_marginLeft="62pt"
        android:onClick="gotoDelivery"
        android:text="@string/btndeliver"
        app:backgroundTint="@color/btn_footer"
     />

    <Button
        android:id="@+id/btnhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50pt"
        android:layout_marginLeft="80pt"
        android:onClick="gotoHome"
        android:text="@string/btnhome"
        app:backgroundTint="@color/btn_footer"
       />

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>