<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderComplete"
    android:background="@drawable/odercom">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#53614e"
        android:alpha="0.5">


    </RelativeLayout>

    <Button
        android:id="@+id/btn_home"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_menu"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_orderview" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/right" />

    <TextView
        android:id="@+id/tv_odercmpled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_odercmplted"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/tv_thankyou"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv_odercmpled" />

    <Button
        android:id="@+id/btn_orderview"
        android:layout_width="217dp"
        android:layout_height="54dp"
        android:layout_marginTop="80dp"
        android:text="View Order Details"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/btn_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_thankyou" />


</androidx.constraintlayout.widget.ConstraintLayout>